Start work on brewing barrel and refactor